pull from production/brian updates

--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -129,7 +129,9 @@
           "menu_type_desktop": "dropdown",
           "show_line_separator": true,
           "enable_sticky_header": true,
-          "margin_bottom": 0
+          "margin_bottom": 0,
+          "padding_top": 20,
+          "padding_bottom": 20
         }
       },
       "footer": {
@@ -186,6 +188,11 @@
         "type": "main-password-footer",
         "settings": {
           "color_scheme": "background-1"
+        }
+      },
+      "go-cart": {
+        "type": "go-cart",
+        "settings": {
         }
       }
     },
