--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -95,6 +95,7 @@
     "predictive_search_enabled": false,
     "predictive_search_show_vendor": false,
     "predictive_search_show_price": false,
+    "favicon": "shopify:\/\/shop_images\/favicon.png",
     "currency_code_enabled": true,
     "checkout_logo_image": "shopify:\/\/shop_images\/ss-logo-full-4-white-bg-horizontal-lg_273e59b3-4219-4d94-88c2-5f9efde49161.png",
     "checkout_accent_color": "#c67a26",
