--- a/.theme-check.yml
+++ b/.theme-check.yml
@@ -2,3 +2,7 @@ MatchingTranslations:
   enabled: false
 TemplateLength:
   enabled: false
+PaginationSize:
+  enabled: false
+  min_size: 1
+  max_size: 550
